// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"emitFile" option should work with "Boolean" value equal "false": assets 1`] = `
Array [
  "main.bundle.js",
]
`;

exports[`"emitFile" option should work with "Boolean" value equal "false": errors 1`] = `Array []`;

exports[`"emitFile" option should work with "Boolean" value equal "false": result 1`] = `"39f5c21c1aee6ff21844c6e1d8251d97.png"`;

exports[`"emitFile" option should work with "Boolean" value equal "false": warnings 1`] = `Array []`;

exports[`"emitFile" option should work with "Boolean" value equal "true": assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97.png",
  "main.bundle.js",
]
`;

exports[`"emitFile" option should work with "Boolean" value equal "true": errors 1`] = `Array []`;

exports[`"emitFile" option should work with "Boolean" value equal "true": result 1`] = `"39f5c21c1aee6ff21844c6e1d8251d97.png"`;

exports[`"emitFile" option should work with "Boolean" value equal "true": warnings 1`] = `Array []`;

exports[`"emitFile" option should work without value: assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97.png",
  "main.bundle.js",
]
`;

exports[`"emitFile" option should work without value: errors 1`] = `Array []`;

exports[`"emitFile" option should work without value: result 1`] = `"39f5c21c1aee6ff21844c6e1d8251d97.png"`;

exports[`"emitFile" option should work without value: warnings 1`] = `Array []`;
